# bricoleur

./: README.md  pyproject.toml
bricoleur/: stairs.py
docs/: requirements.txt
docs/source/: release_notes.rst
docs/source/release_notes/: version_001.rst  version_002.rst  version_003.rst
tests/: test_stairs.py
