[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bricoleur"
authors = [{name = "Gilles Pilon", email = "gillespilon13@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
version = "1.0.5"
description="Tools for machine learning, automation, statistics, graphics"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
]
doc = ["sphinx"]

[project.urls]
Source = "https://github.com/gillespilon/bricoleur"
# Documentation = "https://bricoleur.readthedocs.io/en/latest/"
